# arc

./: .gitignore  CLAUDE.md  README.md  my-play.py  pyproject.toml
.claude/: ralph-loop.local.md
Spring_2026/sm_test/: requirements.txt  scrape_twitter.py
__tests__/api/: feedback-score.test.ts
__tests__/backend/: realtime-token.test.ts  scoring-prompt.test.ts
__tests__/hooks/: use-realtime-session.test.ts
app/: page.tsx
app/account/: page.tsx
app/chat/: page.tsx
app/plans/: page.tsx
backend/: scoring-prompt.ts
backend/handlers/: audience-pulse.ts  blob-delete.ts  chat.ts  extract-context.ts  realtime-token.ts  research.ts  slides.ts  transcribe.ts  upload.ts
components/: chat-navbar.tsx  coaching-interface.tsx  setup-wizard.tsx  trial-feedback-view.tsx
docs/: 01-overview.md  02-architecture.md  03-agent-templates.md  04-smolagents.md  05-game-concepts.md  06-testing-and-development.md  synthetic_game_details.md
experiments/006-adaptive-explorer/: config.py  env_wrapper.py  pyproject.toml  run.py
experiments/006-adaptive-explorer/agents/: __init__.py  adaptive_agent.py
hooks/: use-feedback-stream.ts  use-realtime-session.ts
lib/: sessions.ts
server/: eventLog.js  firewall.js  llm.js  policies.js
synthetic_games/: game_01_courier.py  game_02_wiring.py  game_03_alchemist.py  game_04_mirror_maze.py  game_05_terraformer.py  game_06_conductor.py  game_07_architect.py  game_08_cipher.py  game_09_ecosystem.py  game_10_shapeshifter.py  game_11_maze.py  game_12_maze2.py  play.py  reasoning_agent.py  visual_agent_play.py  visual_play.py
(+267 files in other folders)
